--- a/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
@@ -70,12 +70,12 @@
       {{/l-flex}}
     {{/card-body}}
     {{#> card-footer}}
-      {{#> button-link button-link--modifier="pf-m-link pf-m-inline" button-link--attribute='href="#"'}}
+      {{#> button button--IsAnchor="true" button--modifier="pf-m-link pf-m-inline" button--url='href="#"'}}
         View pathway
         {{#> button-icon button-icon--modifier="pf-m-end"}}
           <i class="fas fa-arrow-right" aria-hidden="true"></i>
         {{/button-icon}}
-      {{/button-link}}
+      {{/button}}
     {{/card-footer}}
   {{/card}}
 {{/l-flex}}
