--- a/src/patternfly/components/BackToTop/back-to-top.hbs
+++ b/src/patternfly/components/BackToTop/back-to-top.hbs
@@ -2,10 +2,10 @@
   {{#if back-to-top--attribute}}
     {{{back-to-top--attribute}}}
   {{/if}}>
-  {{#> button-link button-link--attribute=(concat 'href="#' back-to-top--target '"') button-link--modifier="pf-m-primary"}}
+  {{#> button button--IsAnchor="true" button--url=(concat '#' back-to-top--target) button--modifier="pf-m-primary"}}
     Back to top
     {{#> button-icon button-icon--modifier="pf-m-end"}}
       <i class="fas fa-angle-up" aria-hidden="true"></i>
     {{/button-icon}}
-  {{/button-link}}
+  {{/button}}
 </div>
