--- a/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
+++ b/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
@@ -1,9 +1,3 @@
-{{#if dual-list-selector-draggable-button--IsDisabled}}
-  {{#> button button--type="span" button--modifier="pf-m-plain" button--attribute=(concat 'disabled aria-pressed="false" aria-label="Reorder" id="' dual-list-selector-list-item--id '-draggable-button" aria-labelledby="' dual-list-selector-list-item--id '-draggable-button ' dual-list-selector-list-item--id '-item-text" aria-describedby="' dual-list-selector--id '-help"')}}
+  {{#> button button--type="span" button--modifier="pf-m-plain" button--IsDisabled=dual-list-selector-draggable-button--IsDisabled button--attribute=(concat 'role="button" aria-label="Reorder" id="' dual-list-selector-list-item--id '-draggable-button" aria-labelledby="' dual-list-selector-list-item--id '-draggable-button ' dual-list-selector-list-item--id '-item-text" aria-describedby="' dual-list-selector--id '-help"')}}
     <i class="fas fa-grip-vertical" aria-hidden="true"></i>
   {{/button}}
-{{else}}
-  {{#> button button--type="span" button--modifier="pf-m-plain" button--attribute=(concat 'aria-pressed="false" aria-label="Reorder" id="' dual-list-selector-list-item--id '-draggable-button" aria-labelledby="' dual-list-selector-list-item--id '-draggable-button ' dual-list-selector-list-item--id '-item-text" aria-describedby="' dual-list-selector--id '-help"')}}
-    <i class="fas fa-grip-vertical" aria-hidden="true"></i>
-  {{/button}}
-{{/if}}
