fix(dual-list-selector): draggable button fix

--- a/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
+++ b/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
@@ -1,3 +1,3 @@
-  {{#> button button--type="span" button--modifier="pf-m-plain" button--IsDisabled=dual-list-selector-draggable-button--IsDisabled button--attribute=(concat 'role="button" aria-label="Reorder" id="' dual-list-selector-list-item--id '-draggable-button" aria-labelledby="' dual-list-selector-list-item--id '-draggable-button ' dual-list-selector-list-item--id '-item-text" aria-describedby="' dual-list-selector--id '-help"')}}
+  {{#> button button--type="span" button--modifier="pf-m-plain" button--IsDisabled=dual-list-selector-draggable-button--IsDisabled }}
     <i class="fas fa-grip-vertical" aria-hidden="true"></i>
   {{/button}}
