fix(button): remove href from button--url param

--- a/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
@@ -70,7 +70,7 @@
       {{/l-flex}}
     {{/card-body}}
     {{#> card-footer}}
-      {{#> button button--IsAnchor="true" button--modifier="pf-m-link pf-m-inline" button--url='href="#"'}}
+      {{#> button button--IsAnchor="true" button--modifier="pf-m-link pf-m-inline" button--url="#"}}
         View pathway
         {{#> button-icon button-icon--modifier="pf-m-end"}}
           <i class="fas fa-arrow-right" aria-hidden="true"></i>
