refactor(inpug-group): resolved nits

--- a/src/patternfly/components/InputGroup/input-group-text.hbs
+++ b/src/patternfly/components/InputGroup/input-group-text.hbs
@@ -5,6 +5,9 @@
   {{#if input-group-text--attribute}}
     {{{input-group-text--attribute}}}
   {{/if}}>
+  {{#if input-group-text--value}}
+    {{{input-group-text--value}}}
+  {{/if}}
   {{#if @partial-block}}
     {{> @partial-block}}
   {{/if}}
