--- a/src/patternfly/components/InputGroup/themes/dark/input-group.scss
+++ b/src/patternfly/components/InputGroup/themes/dark/input-group.scss
@@ -2,19 +2,21 @@
 
 @mixin pf-theme-dark-input-group() {
   .pf-c-input-group {
+    --pf-c-input-group__item--BorderLeftWidth: var(--pf-c-input-group__item--BorderWidth--base);
+    --pf-c-input-group__item--BorderLeftColor: var(--pf-global--palette--black-700);
     --pf-c-input-group__item--m-box--BackgroundColor: var(--pf-global--BackgroundColor--400);
     --pf-c-input-group__item--m-box--BorderTopColor: transparent;
-    --pf-c-inpug-group__item--m-box--BorderRightColor: transparent;
+    --pf-c-input-group__item--m-box--BorderRightColor: transparent;
     --pf-c-input-group__item--m-box--BorderBottomColor: var(--pf-global--BorderColor--400);
-    --pf-c-inpug-group__item--m-box--BorderLeftColor: transparent;
+    --pf-c-input-group__item--m-box--BorderLeftColor: transparent;
     --pf-c-input-group__item--m-disabled--BackgroundColor: var(--pf-global--disabled-color--200);
     --pf-c-input-group__item--m-disabled--BorderBottomColor: transparent;
     --pf-c-input-group__text--m-disabled--Color: var(--pf-global--palette--black-100);
 
     > * + * {
-      --pf-c-input-group__item--m-box--BorderLeftColor: var(--pf-global--palette--black-700);
+      --pf-c-input-group__item--m-box--BorderLeftColor: var(--pf-c-input-group__item--BorderLeftColor);
 
-      border-left: 1px solid var(--pf-global--palette--black-700); // global var
+      border-left: var(--pf-c-input-group__item--BorderLeftWidth) solid var(--pf-c-input-group__item--BorderLeftColor);
     }
   }
 }
