--- a/src/patternfly/components/Progress/progress.hbs
+++ b/src/patternfly/components/Progress/progress.hbs
@@ -28,7 +28,8 @@
     {{#if (concat progress--danger progress--success progress--warning)}}
       {{> progress-status}}
     {{/if}}
-    {{else}} {{> progress-status}}
+  {{else}} 
+    {{> progress-status}}
   {{/if}}
   {{> progress-bar}}
   {{#if progress__helper-text}}{{> progress-helper-text}}{{/if}}
