feat(Table/DataList): refactored visual affordances

--- a/src/patternfly/components/Table/table-tbody.hbs
+++ b/src/patternfly/components/Table/table-tbody.hbs
@@ -1,12 +1,12 @@
 <tbody class="
-  {{~#if table-tbody--IsHoverable}} pf-m-hoverable{{/if}}
+  {{~#if table-tbody--IsClickable}} pf-m-clickable{{/if}}
   {{~#if table-tbody--IsSelected}} pf-m-selected{{/if}}
   {{~#if table-tbody--IsExpanded}} pf-m-expanded{{/if}}
   {{#if table-tbody--modifier}} {{table-tbody--modifier}}{{/if}}"
   {{#if table--grid}}
     role="rowgroup"
   {{/if}}
-  {{#if table-tbody--IsHoverable}}
+  {{#if table-tbody--IsClickable}}
     tabindex="0"
   {{/if}}
   {{#if table-tbody--attribute}}
