--- a/src/patternfly/components/DataList/data-list.scss
+++ b/src/patternfly/components/DataList/data-list.scss
@@ -19,16 +19,15 @@
   --pf-c-data-list__item--m-expanded--before--BackgroundColor: var(--pf-global--active-color--100);
   --pf-c-data-list__item--m-selected--before--BackgroundColor: var(--pf-global--active-color--100);
   --pf-c-data-list__item--m-selected--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
-  --pf-c-data-list__item--m-selectable--OutlineOffset: calc(-1 * var(--pf-global--spacer--xs));
-  --pf-c-data-list__item--m-selectable--hover--ZIndex: calc(var(--pf-c-data-list__item--m-selected--ZIndex) + 1);
-  --pf-c-data-list__item--m-selectable--hover--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
-  --pf-c-data-list__item--m-selectable--focus--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
-  --pf-c-data-list__item--m-selectable--active--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
-  --pf-c-data-list__item--m-expanded--m-selectable--before--BackgroundColor: var(--pf-global--active-color--300);
+  --pf-c-data-list__item--m-clickable--OutlineOffset: calc(-1 * var(--pf-global--spacer--xs));
+  --pf-c-data-list__item--m-clickable--hover--ZIndex: calc(var(--pf-c-data-list__item--m-selected--ZIndex) + 1);
+  --pf-c-data-list__item--m-clickable--hover--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
+  --pf-c-data-list__item--m-clickable--focus--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
+  --pf-c-data-list__item--m-clickable--active--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
   --pf-c-data-list__item--BorderBottomColor: var(--pf-global--BorderColor--300);
   --pf-c-data-list__item--BorderBottomWidth: #{pf-size-prem(8px)};
-  --pf-c-data-list__item--m-selectable--hover--item--BorderTopColor: var(--pf-c-data-list__item--BorderBottomColor);
-  --pf-c-data-list__item--m-selectable--hover--item--BorderTopWidth: var(--pf-c-data-list__item--BorderBottomWidth);
+  --pf-c-data-list__item--m-clickable--hover--item--BorderTopColor: var(--pf-c-data-list__item--BorderBottomColor);
+  --pf-c-data-list__item--m-clickable--hover--item--BorderTopWidth: var(--pf-c-data-list__item--BorderBottomWidth);
   --pf-c-data-list__item--sm--BorderBottomWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-data-list__item--sm--BorderBottomColor: var(--pf-global--BorderColor--100);
 
@@ -39,7 +38,7 @@
 
   // list item border left
   --pf-c-data-list__item--before--BackgroundColor: transparent;
-  --pf-c-data-list__item--before--Width: var(--pf-global--BorderWidth--lg);
+  --pf-c-data-list__item--before--Width: calc(2 * var(--pf-global--BorderWidth--lg));
   --pf-c-data-list__item--before--Transition: var(--pf-global--Transition);
   --pf-c-data-list__item--before--Top: 0;
   --pf-c-data-list__item--before--sm--Top: calc(var(--pf-c-data-list__item--BorderBottomWidth) * -1);
@@ -122,8 +121,6 @@
   --pf-c-data-list__item-action__action--MarginBottom: calc(var(--pf-global--spacer--form-element) * -1);
 
   // expandable content
-  --pf-c-data-list__expandable-content--BorderTopWidth: var(--pf-global--BorderWidth--sm);
-  --pf-c-data-list__expandable-content--BorderTopColor: var(--pf-global--BorderColor--100);
   --pf-c-data-list__expandable-content--MarginRight: calc(var(--pf-c-data-list__expandable-content-body--PaddingRight) * -1);
   --pf-c-data-list__expandable-content--MarginLeft: calc(var(--pf-c-data-list__expandable-content-body--PaddingLeft) * -1);
   --pf-c-data-list__expandable-content--MaxHeight: #{pf-size-prem(600px)};
@@ -247,14 +244,14 @@
     transition: var(--pf-c-data-list__item--before--Transition);
   }
 
-  &.pf-m-selectable {
+  &.pf-m-clickable {
     cursor: pointer;
-    outline-offset: var(--pf-c-data-list__item--m-selectable--OutlineOffset);
+    outline-offset: var(--pf-c-data-list__item--m-clickable--OutlineOffset);
 
     &:hover,
     &:focus {
       position: relative;
-      z-index: var(--pf-c-data-list__item--m-selectable--hover--ZIndex);
+      z-index: var(--pf-c-data-list__item--m-clickable--hover--ZIndex);
 
       // stylelint-disable selector-not-notation
       // update to single :not() in breaking change
@@ -263,22 +260,22 @@
 
         // stylelint-disable
         + .pf-c-data-list__item {
-          border-top: var(--pf-c-data-list__item--m-selectable--hover--item--BorderTopWidth) solid var(--pf-c-data-list__item--m-selectable--hover--item--BorderTopColor);
+          border-top: var(--pf-c-data-list__item--m-clickable--hover--item--BorderTopWidth) solid var(--pf-c-data-list__item--m-clickable--hover--item--BorderTopColor);
         }
         // stylelint-enable
       }
     }
 
     &:hover {
-      box-shadow: var(--pf-c-data-list__item--m-selectable--hover--BoxShadow);
+      box-shadow: var(--pf-c-data-list__item--m-clickable--hover--BoxShadow);
     }
 
     &:focus {
-      box-shadow: var(--pf-c-data-list__item--m-selectable--focus--BoxShadow);
+      box-shadow: var(--pf-c-data-list__item--m-clickable--focus--BoxShadow);
     }
 
     &:active {
-      box-shadow: var(--pf-c-data-list__item--m-selectable--active--BoxShadow);
+      box-shadow: var(--pf-c-data-list__item--m-clickable--active--BoxShadow);
     }
   }
 
@@ -305,11 +302,6 @@
 
   &.pf-m-expanded {
     --pf-c-data-list__toggle-icon--Rotate: var(--pf-c-data-list__item--m-expanded__toggle-icon--Rotate);
-    --pf-c-data-list__item--before--BackgroundColor: var(--pf-c-data-list__item--m-expanded--before--BackgroundColor);
-
-    &.pf-m-selectable:not(.pf-m-selected) {
-      --pf-c-data-list__item--before--BackgroundColor: var(--pf-c-data-list__item--m-expanded--m-selectable--before--BackgroundColor);
-    }
   }
 }
 
@@ -465,10 +457,13 @@
 .pf-c-data-list__expandable-content {
   max-height: var(--pf-c-data-list__expandable-content--MaxHeight);
   overflow-y: auto;
-  border-top: var(--pf-c-data-list__expandable-content--BorderTopWidth) solid var(--pf-c-data-list__expandable-content--BorderTopColor);
 
   .pf-c-data-list__expandable-content-body {
     padding: var(--pf-c-data-list__expandable-content-body--PaddingTop) var(--pf-c-data-list__expandable-content-body--PaddingRight) var(--pf-c-data-list__expandable-content-body--PaddingBottom) var(--pf-c-data-list__expandable-content-body--PaddingLeft);
+
+    // > .pf-c-data-list {
+    //   border-top-width: 0;
+    // }
 
     &.pf-m-no-padding {
       padding: 0;
