--- a/src/patternfly/base/themes/dark/_globals.scss
+++ b/src/patternfly/base/themes/dark/_globals.scss
@@ -1,4 +1,4 @@
-@mixin globals() {
+@mixin pf-_globals() {
   // stylelint-disable property-no-unknown
   color-scheme: dark;
   // stylelint-enable
