--- a/src/patternfly/components/Avatar/avatar.scss
+++ b/src/patternfly/components/Avatar/avatar.scss
@@ -1,5 +1,5 @@
 $pf-c-avatar--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl", "2xl");
-$sizes: "sm", "md", "lg", "xl";
+$pf-c-avatar--sizes: "sm", "md", "lg", "xl";
 
 .pf-c-avatar {
   --pf-c-avatar--BorderColor: transparent;
@@ -39,7 +39,7 @@ $sizes: "sm", "md", "lg", "xl";
     --pf-c-avatar--BorderWidth: var(--pf-c-avatar--m-dark--BorderWidth);
   }
 
-  @each $size in $sizes {
+  @each $size in $pf-c-avatar--sizes {
     &.pf-m-#{$size} {
       @include pf-build-css-variable-stack("--pf-c-avatar--Width", "--pf-c-avatar--m-#{$size}--Width", $pf-c-avatar--breakpoint-map);
       @include pf-build-css-variable-stack("--pf-c-avatar--Height", "--pf-c-avatar--m-#{$size}--Height", $pf-c-avatar--breakpoint-map);
