--- a/src/patternfly/sass-utilities/scss-variables.scss
+++ b/src/patternfly/sass-utilities/scss-variables.scss
@@ -124,6 +124,7 @@ $pf-global--BoxShadow--inset: inset 0 0 pf-size-prem(10) 0 rgba($pf-color-black-
 $pf-global--font-path: "./assets/fonts" !default;
 
 // Iconpath
+// stylelint-disable-next-line scss/dollar-variable-pattern
 $fa-font-path: "./assets/fonts/webfonts" !default;
 
 // FontIcon path
